# nav

./: .dockerignore  .gitignore  Dockerfile  Readme.md  docker-compose.yml  nginx.conf
admin/: .env  .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin/public/: serverConfig.json
admin/src/: main.ts
admin/src/api/: crud.ts  routes.ts  types.ts
admin/src/components/: MIcon.vue  icon.vue
admin/src/hooks/: crud.tsx  icon.tsx  spider.tsx  ws.tsx
admin/src/layout/: index.vue
admin/src/plugins/: element-plus.ts  (+1 more)
admin/types/: global.d.ts
api/: .pdm.toml  main.py  migrate.py  pyproject.toml  requirements.txt  settings.py  static.py  system.db  system.db-shm  system.db-wal
api/api/: __init__.py  menu.py  nav.py  user.py
api/api/friend/: __init__.py  views.py
api/api/links/: __init__.py  schemas.py  utils.py  views.py
api/api/menu/: __init__.py  schemas.py  views.py
api/api/site/: __init__.py  schemas.py  views.py
api/api/spider/: __init__.py  utils.py  views.py
api/api/system/: __init__.py  login.py  schemas.py  user.py  utils.py
api/api/system/login/: __init__.py  views.py
api/api/system/user/: __init__.py  views.py
api/auth/: __init__.py  auth.py  schemas.py
api/config/: .env
api/core/: __init__.py  app.py  auth.py  exception.py  http_status.py  listeners.py  middleware.py
api/core/crud/: __init__.py  crud.py  custom_exc.py  response.py  status.py
api/core/db/: base.py
api/core/server/: app.py  exception.py  listeners.py  middleware.py  router.py
api/data/: data.db
api/models/: __init__.py  friend.py  info.py  links.py  menu.py  site.py  system.py  user.py
api/utils/: error.py  faker.py  img.py  site.py
data/: data.db
home/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
home/src/: main.ts
pure-admin/: .env.staging  package.json  pnpm-lock.yaml
pure-admin/src/: main.ts
(+184 files in other folders)
