[tool]
[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true


[project]
name = ""
version = ""
description = ""
authors = [
    {name = "moxiaoying", email = "768091671@qq.com"},
]
dependencies = [
    "fastapi-tortoise-crud>=0.1.17",
    "loguru>=0.7.0",
    "httpx>=0.24.1",
    "BeautifulSoup4>=4.12.2",
    "fastapi-jwt>=0.1.12",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "asyncmy",
    "aiosqlite",
    "uvicorn",
    "python-dotenv",
    "fastapi-cache2>=0.2.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

