[tool]
[tool.pdm]
package-type = "application"
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true


[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "moxiaoying", email = "768091671@qq.com"},
]
dependencies = [
    "fastapi-tortoise-crud>=0.1.20",
    "loguru>=0.7.0",
    "httpx>=0.24.1",
    "BeautifulSoup4>=4.12.2",
    "fastapi-jwt>=0.1.12",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "asyncmy",
    "aiosqlite",
    "uvicorn",
    "python-dotenv",
    "fastapi-cache2[redis]>=0.2.1",
    "lxml>=5.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

